Tests/ShouldFail/FactERRConcat1.adl
CONTEXT Factuur IN ENGLISH

factuurRegel :: Factuur * Regel
regelText :: Regel * TEXT [UNI]
factuurOK :: Factuur * Factuur [PROP]

RULE "Factuur controle": factuurOK = I[Factuur] /\ -(factuurRegel;-((I /\ regelText;regelText~);factuurRegel))
MEANING "Definitie: een factuur is ok DESDA de factuur is leeg, of elk van zijn regels bevat een text."

POPULATION factuurRegel CONTAINS [ ("Factuur1", "Regel1") ]
POPULATION factuurOK    CONTAINS [ ("Factuur1", "Factuur1") ]

ENDCONTEXT